--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ before_script:
 
 script:
   - bundle exec rubocop .
-  - RAILS_ENV=test bundle exec rake
+  - RUBYOPT=W0 RAILS_ENV=test bundle exec rake
