--- a/config/sidekiq.yml
+++ b/config/sidekiq.yml
@@ -8,12 +8,6 @@
   - [http_request, 50]
   - [search_indexer, 30]
   - [mailer, 5]
+  - [cleanup, 5]
   - [mailers, 5]
   - [default, 3]
-:schedule:
-  doorkeeper_cleanup:
-    cron: "<%= Random.rand(0..59) %> <%= Random.rand(3..5) %> * * *"
-    class: Scheduler::DoorkeeperCleanupJob
-  notification_cleanup:
-    cron: "<%= Random.rand(0..59) %> <%= Random.rand(3..5) %> * * *"
-    class: Scheduler::NotificationCleanupJob
