--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "backbone": "^1.4.0",
     "bootstrap": "^4.5.0",
     "dropzone": "^5.7.1",
-    "font-awesome": "^4.7.0",
+    "@fortawesome/fontawesome-free": "^5.13.1",
     "jquery": "^1.12.4",
     "jquery.caret": "^0.3.1",
     "popper.js": "^1.16.1",
