feat: Append missing denpendencies.

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -2,7 +2,7 @@ FROM swipesense/ruby-jemalloc:2.7-buster-slim
 
 RUN gem install bundler
 RUN apt-get update &&  \
-  apt-get install -y ca-certificates nodejs curl git htop tzdata imagemagick nginx libnginx-mod-http-image-filter libnginx-mod-http-geoip  \
+  apt-get install -y ca-certificates nodejs cron socat curl git htop tzdata imagemagick nginx libnginx-mod-http-image-filter libnginx-mod-http-geoip  \
   build-essential ruby-dev openssl libpq-dev libxml2-dev libxslt-dev && \
   curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
   echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
