更新 homeland/base image 确保 acme.sh 正确安装

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -1,11 +1,13 @@
 FROM swipesense/ruby-jemalloc:2.7-buster-slim
 
 RUN gem install bundler
-RUN apt-get update &&  \
-  apt-get install -y ca-certificates nodejs cron socat curl git htop tzdata imagemagick nginx libnginx-mod-http-image-filter libnginx-mod-http-geoip  \
-  build-essential ruby-dev openssl libpq-dev libxml2-dev libxslt-dev && \
+RUN sed -i 's#http://deb.debian.org#https://mirrors.163.com#g' /etc/apt/sources.list && \
+  apt update && apt install -y curl gnupg && \
   curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
   echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
-  apt-get update && apt-get -y install yarn
+  apt update
+
+RUN apt install -y ca-certificates nodejs cron socat curl git htop tzdata imagemagick nginx libnginx-mod-http-image-filter libnginx-mod-http-geoip  \
+  build-essential ruby-dev openssl libpq-dev libxml2-dev libxslt-dev yarn
 
 RUN curl https://get.acme.sh | sh
