--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -1,4 +1,4 @@
-FROM swipesense/ruby-jemalloc:2.7-buster-slim
+FROM ruby:2.7-slim-buster
 
 RUN gem install bundler
 RUN sed -i 's#http://deb.debian.org#https://mirrors.163.com#g' /etc/apt/sources.list && \
