Fix Docker base image Node.js to version 14

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -3,6 +3,7 @@ FROM rubylang/ruby:3.0.0-preview1-bionic
 RUN gem install bundler
 RUN sed -i 's#http://deb.debian.org#https://mirrors.163.com#g' /etc/apt/sources.list && \
   apt update && apt install -y curl gnupg && \
+  curl -sL https://deb.nodesource.com/setup_14.x |  bash - && \
   curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | apt-key add - && \
   echo "deb https://dl.yarnpkg.com/debian/ stable main" | tee /etc/apt/sources.list.d/yarn.list && \
   apt update
