Docker base use Ruby 2.7.2

--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -1,4 +1,4 @@
-FROM rubylang/ruby:3.0.0-preview1-bionic
+FROM ruby:2.7.2-slim-buster
 
 RUN gem install bundler
 RUN sed -i 's#http://deb.debian.org#https://mirrors.163.com#g' /etc/apt/sources.list && \
