--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@rails/actioncable": "~6.0",
     "@rails/ujs": "~6.0",
     "@rails/webpacker": "~5.2",
+    "add": "^2.0.6",
     "babel-plugin-transform-react-remove-prop-types": "~0.4.24",
     "backbone": "~1.4",
     "bootstrap": "~4.5",
+    "bootstrap-select": "^1.13.18",
     "dropzone": "~5.7",
     "jquery": "~1.12",
     "jquery.caret": "~0.3.1",
@@ -22,7 +24,8 @@
     "react-dom": "~16.13",
     "turbolinks": "~5.2",
     "turbolinks-prefetch": "~1.0",
-    "underscore": "~1.11"
+    "underscore": "~1.11",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "webpack-dev-server": "~3.11"
