--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   },
   "dependencies": {
     "@babel/preset-react": "~7.10",
-    "@fortawesome/fontawesome-free": "~5.15",
+    "@fortawesome/fontawesome-free": "6.0.0-beta3",
     "@popperjs/core": "^2.9.2",
-    "@rails/actioncable": "~6.0",
-    "@rails/ujs": "~6.0",
-    "@rails/webpacker": "~5.2",
+    "@rails/actioncable": "~7.0",
+    "@rails/ujs": "~7.0",
+    "@rails/webpacker": "~5.4",
     "babel-plugin-transform-react-remove-prop-types": "~0.4.24",
     "backbone": "~1.4",
     "bootstrap": "~5",
