--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "@rails/actioncable": "~7.0",
     "@rails/ujs": "~7.0",
     "@rails/webpacker": "~5.4",
-    "babel-plugin-transform-react-remove-prop-types": "~0.4.24",
     "backbone": "~1.4",
     "bootstrap": "~5",
     "bootstrap-select": "^1.14.0-beta2",
@@ -27,13 +26,12 @@
     "react-dom": "~16.13",
     "turbolinks": "~5.2",
     "turbolinks-prefetch": "~1.0",
-    "underscore": "~1.12",
-    "yarn": "^1.22.10"
+    "underscore": "~1.12"
   },
   "devDependencies": {
-    "@prettier/plugin-ruby": "^1.5.5",
-    "prettier": "^2.2.1",
-    "prettier-plugin-erb": "^0.1.0",
+    "@prettier/plugin-ruby": "^2",
+    "prettier": "^2",
+    "prettier-plugin-erb": "^0",
     "webpack-dev-server": "~3.11"
   }
 }
