--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ app.local.env
 /yarn-error.log
 yarn-debug.log*
 .yarn-integrity
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
