--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@popperjs/core": "^2.9.2",
     "@rails/actioncable": "~7.0",
     "@rails/ujs": "~7.0",
-    "@rails/webpacker": "~5.4",
+    "@rails/webpacker": "^6.0.0-rc.6",
     "backbone": "~1.4",
     "bootstrap": "~5",
     "bootstrap-select": "^1.14.0-beta2",
@@ -26,12 +26,34 @@
     "react-dom": "~16.13",
     "turbolinks": "~5.2",
     "turbolinks-prefetch": "~1.0",
-    "underscore": "~1.12"
+    "underscore": "~1.12",
+    "webpack": "^5.53.0",
+    "webpack-cli": "^4.8.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.16.5",
     "@prettier/plugin-ruby": "^2",
+    "@webpack-cli/serve": "^1.6.0",
+    "babel-plugin-macros": "^3.1.0",
+    "css-loader": "^6.5.1",
+    "css-minimizer-webpack-plugin": "^3.3.1",
+    "mini-css-extract-plugin": "^2.4.5",
+    "postcss": "^8.4.5",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.0.2",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.1.0",
     "prettier": "^2",
     "prettier-plugin-erb": "^0",
-    "webpack-dev-server": "~3.11"
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.5.4",
+    "webpack-dev-server": "^4.7.1"
+  },
+  "babel": {
+    "presets": [
+      "./node_modules/@rails/webpacker/package/babel/preset.js"
+    ]
   }
 }
