--- a/Dockerfile-base
+++ b/Dockerfile-base
@@ -3,7 +3,7 @@ FROM ruby:3.1.0-slim-buster
 RUN gem install bundler
 RUN sed -i 's#http://deb.debian.org#https://mirrors.163.com#g' /etc/apt/sources.list && \
   apt update && apt install -y curl gcc g++ gnupg make && \
-  curl -fsSL https://deb.nodesource.com/setup_current.x | bash -
+  curl -fsSL https://deb.nodesource.com/setup_16.x | bash -
 
 RUN apt install -y ca-certificates nodejs cron socat curl git htop tzdata imagemagick nginx libnginx-mod-http-image-filter libnginx-mod-http-geoip  \
   build-essential ruby-dev openssl libpq-dev libxml2-dev libxslt-dev nodejs
