--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "sass-loader": "^12.4.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.5.4",
+    "@polkadot/extension-dapp": "^0.42.7",
     "webpack-dev-server": "^4.7.1"
   },
   "babel": {
